blocks/card/card.css
.card {
  --card-padding-block: var(--s2-spacing-400);
  --card-padding-inline: var(--s2-spacing-500);
  --card-border-radius: var(--s2-corner-radius-800);

  overflow-wrap: break-word;
  box-shadow: 0 1px 6px 0 rgb(from var(--s2-gray-1000) r g b / 12%);
  background-color: var(--s2-gray-25);
  inline-size: 100%;
  overflow: hidden;
  margin: var(--s2-spacing-400) auto;
  border-radius: var(--card-border-radius);
  box-sizing: border-box;
  transition: all 0.25s ease-in-out;
  container-name: card-container;
  container-type: inline-size;

  &:has(.card-link:hover) {
    transform: scale(1.005);
    box-shadow: 0 2px 8px 0 rgb(from var(--s2-gray-1000) r g b / 16%);
  }

  &:has(.card-link:active) {
    transform: scale(0.995);
    box-shadow: 0 2px 8px 0 rgb(from var(--s2-gray-1000) r g b / 16%);
  }

  &:has(.card-link:focus-visible) {
    outline: var(--se-focus-indicator-width) solid var(--s2-blue-800);
    outline-offset: var(--s2-spacing-75);
  }

  @media (prefers-reduced-motion: reduce) {
    transition: none;
  }

  .card-link {
    display: block;
    block-size: 100%;
    text-decoration: none;
    color: inherit;
    outline: none;
  }

  .card-content-container:not(:has(img, picture)) {
    display: flex;
    justify-content: center;
    padding: var(--card-padding-block) var(--card-padding-inline);
    box-sizing: border-box;
    gap: var(--s2-spacing-300);

    > .card-text-container {
      padding: 0;
      margin: 0;
    }
  }

  .card-content-container:has(img, picture) {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto 1fr;
    gap: var(--s2-spacing-500);
    padding: 0;
    block-size: 100%;
    box-sizing: border-box;

    @container card-container (width >= 400px) {
      grid-template-columns: auto 1fr;
      grid-template-rows: 1fr;
    }

    .card-picture-container {
      box-sizing: border-box;
      inline-size: 100%;
      overflow: hidden;
      background-color: var(--s2-gray-600);

      @container card-container (width >= 400px) {
        inline-size: 180px;
      }
    }

    picture {
      display: block;
      inline-size: 100%;
      block-size: 100%;
    }

    img {
      inline-size: 100%;
      block-size: 100%;
      object-fit: cover;
      display: block;
    }
  }

  .card-text-container {
    padding-inline: var(--card-padding-inline);
    margin-block-end: var(--card-padding-block);
    display: flex;
    flex-direction: column;
    gap: var(--s2-spacing-100);
    justify-content: start;

    & h3,
    & p {
      margin: 0;
    }

    @container card-container (width >= 400px) {
      padding-inline-start: 0;
      margin-block: var(--card-padding-block);
    }
  }

  .card-text-container:has(.card-text-content + .card-link-out) {
    display: flex;
    flex-direction: row;
    gap: var(--s2-spacing-300);
  }

  .card-text-content {
    display: flex;
    flex-direction: column;
    gap: var(--s2-spacing-100);
  }

  .card-link-out {
    display: flex;
    align-items: center;
    justify-content: center;
    color: inherit;
    min-inline-size: 24px;
    min-block-size: var(--s2-component-s-height);

     > svg {
      inline-size: 20px;
      block-size: 20px;
    }
  }
}

.card:not(.vertical) .card-text-container:not(:has(p)) {
  justify-content: center;
}

.card.vertical {
  .card-content-container {
    display: flex;
    flex-direction: column;
    gap: 0;
  }

  .card-content-container:has(img, picture) .card-picture-container {
    inline-size: 100%;
    aspect-ratio: 16/9;
  }

  .card-content-container:has(.card-text-container) .card-text-container {
    padding: var(--card-padding-block) var(--card-padding-inline);
    margin: 0;
    flex: 1;
  }
}

